[package]
name = "longshoreman"
version = "0.1.0"
authors = ["Daniel Eades <danieleades@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13.1"
pin-project = "0.4.6"
futures-util = { version = "0.3.1", features = ["io"] }
tokio = "0.2.9"
serde = { version = "1.0.104", features = ["derive"] }
tokio-util = "0.2.0"
http = "0.2.0"
mime = "0.3.16"
serde_json = "1.0.44"
serde_urlencoded = "0.6.1"

[target.'cfg(target_os = "linux")'.dependencies]
hyperlocal = {git = "https://github.com/softprops/hyperlocal" }

[dev-dependencies]
async-std = { version = "1.4.0", features = [] }
tokio = { version = "0.2.9", features = ["macros", "rt-threaded"] }
