[package]
name = "longshoreman"
version = "0.1.0"
authors = ["Daniel Eades <danieleades@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13.5"
pin-project = "0.4.9"
futures-util = { version = "0.3.4", features = ["io"] }
tokio = "0.2.20"
serde = { version = "1.0.106", features = ["derive"] }
tokio-util = { version = "0.3.1", features = ["codec"] }
http = "0.2.1"
mime = "0.3.16"
serde_json = "1.0.52"
serde_urlencoded = "0.6.1"

[target.'cfg(target_os = "linux")'.dependencies]
hyperlocal = "0.7.0"

[dev-dependencies]
async-std = { version = "1.5.0", features = [] }
tokio = { version = "0.2.20", features = ["macros", "rt-threaded", "fs"] }
